feat: snapshots api (#1756)
* feat: snapshots api

* rm slz gui reference

* feat: json to iac for snapshots
